<resources>
    <string name="app_name">FineJob</string>
    <string name="title_search">Поиск</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_responses">Отклики</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <string name="text_for_empty_fragments">Your advertisement could be here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_enter_in_personal_account">Вход в личный кабинет</string>
    <string name="label_search_job">Поиск работы</string>
    <string name="text_button_continue">Продолжить</string>
    <string name="text_login_with_pass">Войти с паролем</string>
    <string name="label_search_employees">Поиск сотрудников</string>
    <string name="text_info_about_search_employees">Размещение вакансий и доступ к базе резюме</string>
    <string name="text_button_i_search_employees">Я ищу сотрудников</string>
    <string name="text_info_instruction_for_code">Напишите его, чтобы подтвердить, что это вы,\nа не кто-то другой входит в личный кабинет</string>
    <string name="label_send_code_on_email">Отправили код на example@mail.ru</string>
    <string name="text_button_allow">Подтвердить</string>
    <string name="hint_job_title_keywords">Должность, ключевые слова</string>
    <string name="title_vacancy_for_y">Вакансии для вас</string>
    <string name="will_respond">Откликнуться</string>
    <string name="offer_icon">Offer icon</string>
    <string name="up_your_resume">Поднять</string>
    <string name="company_verify_icon">Company verify icon</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="search_keywords_icon">Search keywords icon</string>
    <string name="sorting_vacancies_icon">Sorting vacancies icon</string>
    <string name="published_date">Опубликовано %s</string>
    <string name="experience_icon">Experience icon</string>

    <!-- one - для одного элемента (1 вакансия)
    few - для нескольких элементов (2, 3, 4 вакансии)
    many - для большого количества элементов (5 и более вакансий)
    other - для остальных случаев (например, для дробных чисел)
    -->
    <plurals name="vacancies_count">
        <item quantity="one">%d вакансия</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="many">%d вакансий</item>
        <item quantity="other">%d вакансий</item>
    </plurals>

    <plurals name="yet_vacancies_count">
        <item quantity="one">Еще %d вакансия</item>
        <item quantity="few">Еще %d вакансии</item>
        <item quantity="many">Еще %d вакансий</item>
        <item quantity="other">Еще %d вакансии</item>
    </plurals>

    <!-- one - для одного элемента (1 человек)
    few - для нескольких элементов (2, 3, 4 человека)
    many - для большого количества элементов (5 и более человек)
    other - для остальных случаев (например, для дробных чисел)
    -->
    <plurals name="humans_count">
        <item quantity="one">%d человек</item>
        <item quantity="few">%d человека</item>
        <item quantity="many">%d человек</item>
        <item quantity="other">%d человек</item>
    </plurals>

    <plurals name="humans_views_count">
        <item quantity="one">Сейчас просматривает %d человек</item>
        <item quantity="few">Сейчас просматривает %d человека</item>
        <item quantity="many">Сейчас просматривает %d человек</item>
        <item quantity="other">Сейчас просматривает %d человек</item>
    </plurals>

    <plurals name="responses_count">
        <item quantity="one">%d человек уже откликнулись</item>
        <item quantity="few">%d человека уже откликнулись</item>
        <item quantity="many">%d человек уже откликнулись</item>
        <item quantity="other">%d человек уже откликнулись</item>
    </plurals>



</resources>