<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_type_search_state_default"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_type_heart_state_default"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_responses"
        android:icon="@drawable/ic_type_responses_mail_state_default"
        android:title="@string/title_responses" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_type_messeges_state_default"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_type_profile_state_default"
        android:title="@string/title_profile" />
</menu>