<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.buller.finejob.ui.home.HomeFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.buller.finejob.ui.favorite.FavoriteFragment"
        android:label = "@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_responses"
        android:name="com.buller.finejob.ui.responses.ResponsesFragment"
        android:label="@string/title_responses"
        tools:layout="@layout/fragment_responses" />
    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.buller.finejob.ui.messages.MessagesFragment"
        android:label="fragment_messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.buller.finejob.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>