<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextTypo.Large.Semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_send_code_on_email" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextTypo.Medium.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_info_instruction_for_code" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- //TODO настроить центр в текстовых полях-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_1_layout"
                style="@style/CustomTextInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_1_et"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="*"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_2_layout"
                style="@style/CustomTextInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_2_et"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="*"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_3_layout"
                style="@style/CustomTextInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_3_et"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="*"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/number_4_layout"
                style="@style/CustomTextInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/number_4_et"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:text="*"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/CustomButton.Blue.Semibold"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/text_button_allow" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>